--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -59,8 +59,8 @@ import Layout from '../components/layout.astro';
 </style>
 
 <Layout
-  title="Netlify Feature Tour"
-  description="This is a small site to show the most powerful features of Netlify quickly!"
+  title="Matt Baker's Remedial Website"
+  description="Hello Brian!"
   home
 >
   <main class="steps">
