Updated body text

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -59,29 +59,27 @@ import Layout from '../components/layout.astro';
 </style>
 
 <Layout
-  title="Matt Baker's Remedial Website"
+  title="Matt Baker's Cutting Edge Website"
   description="Hello Brian!"
   home
 >
   <main class="steps">
     <section class="step">
-      <h2 class="stepHeading">Deploy Previews</h2>
+      <h2 class="stepHeading">Resume</h2>
       <p>
-        Every pull request is automatically built in an
-        identical-to-production environment for
-        <strong>painless QA, feedback, and review.</strong>
+        Download resume in
+        <strong>PDF Format</strong>
       </p>
       <a href="/deploy-previews" class="button">
-        Learn more <span class="sr-only">about Deploy Previews</span>
+        Download <span class="sr-only">about Deploy Previews</span>
       </a>
     </section>
 
     <section class="step">
-      <h2 class="stepHeading">Instant Rollbacks</h2>
+      <h2 class="stepHeading">Project 1</h2>
       <p>
-        Confidently ship to production with the knowledge that it’s a
-        one-click operation to roll back to a previous version of the site.
-        <strong>Instant disaster recovery!</strong>
+        Some info about project 1.
+        <strong>Project 1 tagline!</strong>
       </p>
       <a href="/instant-rollbacks" class="button">
         Learn more
@@ -90,11 +88,10 @@ import Layout from '../components/layout.astro';
     </section>
 
     <section class="step">
-      <h2 class="stepHeading">Netlify Functions</h2>
+      <h2 class="stepHeading">Project 2</h2>
       <p>
-        <strong>Serverless functions are superpowers for web developers!</strong>
-        Securely handle server-like requirements at any scale with no
-        provisioning, scaling, or ops overhead.
+        Some info about project 2.
+        <strong>Project 2 tagline!</strong>
       </p>
       <a href="/functions" class="button">
       Learn more
@@ -103,13 +100,10 @@ import Layout from '../components/layout.astro';
     </section>
 
     <section class="step">
-      <h2 class="stepHeading">Netlify Forms</h2>
+      <h2 class="stepHeading">Project 3</h2>
       <p>
-        Handle user input with a single line of code. Netlify Forms allow
-        any HTML form to
-        <strong>
-            accept submissions, send notification emails, and trigger custom events.
-        </strong>
+        Some info about project 3.
+        <strong>Project 3 tagline!</strong>
       </p>
       <a href="/netlify-forms" class="button">
         Learn more <span class="sr-only">about Netlify Forms</span>
