--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -67,11 +67,11 @@ import Layout from '../components/layout.astro';
     <section class="step">
       <h2 class="stepHeading">Resume</h2>
       <p>
-        Download resume in
-        <strong>PDF Format</strong>
+        View Resume in
+        <strong>Google Docs</strong>
       </p>
-      <a href="/deploy-previews" class="button">
-        Download <span class="sr-only">about Deploy Previews</span>
+      <a href="https://docs.google.com/document/d/1-hb8n8x9KpDobhvgjZ7ItIDkaloDMFZ1KDmAQVdAZnk/edit?usp=sharing" class="button">
+        View <span class="sr-only">about Deploy Previews</span>
       </a>
     </section>
 
@@ -81,9 +81,9 @@ import Layout from '../components/layout.astro';
         Some info about project 1.
         <strong>Project 1 tagline!</strong>
       </p>
-      <a href="/instant-rollbacks" class="button">
+      <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" class="button">
         Learn more
-        <span class="sr-only">about Instant Rollbacks</span>
+        <span class="sr-only">about Project 1</span>
       </a>
     </section>
 
@@ -105,8 +105,8 @@ import Layout from '../components/layout.astro';
         Some info about project 3.
         <strong>Project 3 tagline!</strong>
       </p>
-      <a href="/netlify-forms" class="button">
-        Learn more <span class="sr-only">about Netlify Forms</span>
+      <a href="https://en.wikipedia.org/wiki/Project" class="button">
+        Learn more <span class="sr-only">about Projects</span>
       </a>
     </section>
   </main>
